# Web-App-Test

./: .gitignore  readme.md
rust_backend/: Cargo.toml
rust_backend/src/: main.rs  webcam.rs
svelte_frontend/: index.html  package-lock.json  package.json
svelte_frontend/src/: App.svelte  Dropdown.svelte  app.css
