[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.4"
futures-util = "0.3"
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
piper = "0.2.4"
piper-rs = "0.1.9"
whisper-rs = "0.8"
