[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.4"
futures-util = "0.3"
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
piper = "0.2.4"
piper-rs = "0.1.9"
deepgram = "0.6.5"
lewton = "0.10.1"
hound = "3.4.0"
webm = "1.1.2"
audrey = "0.3.0"
ogg = "0.8"
opus = "0.3"
simple_transcribe_rs = "1.0.1"